--- a/style.css
+++ b/style.css
@@ -15,15 +15,17 @@ body{
 
 .box{
     margin: 120px auto;
-    max-width: 400px;
+    max-width: 550px;
     width: 100%;
     background-color: bisque;
-    border-radius: 6px;
+    border-radius: 25px;
     padding: 25px;
 }
 .box header{
-    font-size: 30px;
-    font-weight: 600px;
+    font-size:40px;
+    font-weight: 800px;
+    padding-bottom: 15px;
+    padding-left: 15px;
 }
 .box inputText{
     display: flex;
@@ -32,12 +34,17 @@ body{
     margin: 20px 0;
 } 
 .inputText input{
-    width: 85%;
+    width: 80%;
     height: 100%;
-    border: 1px solid #ccc;
-    font-size: 17px;
-    border-radius: 3px;
+    border: 2px solid gray;
+    font-size: 20px; 
+    border-radius: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     padding-left: 20px;
+    margin-bottom: 17px;
+    margin-left: 10px;
+    /* text-align: center; */
 }
 .inputText button{
     width: 60px;
@@ -45,24 +52,30 @@ body{
     border: none;
     outline: none;
     color: white;
-    background: #8E49E8;
+    background: #FF6D00;
     font-size: 22px;
     cursor: pointer;
     border-radius: 3px;
     margin-left: 5px;
+    opacity: 0.5;
+    pointer-events:none;
+}
+.inputText button.active{
+    opacity: 1;
+    pointer-events:auto;
 }
 .box .todolist{
-    max-height: 300px;
+    max-height: 1350px;
     overflow-y: auto;
 }
 
 .todolist li{
     list-style: none;
     height: 45px;
-    line-height: 45px;
+    line-height: 40px;
     position: relative;
     background: #f2f2f2;
-    border-radius: 3px;
+    border-radius: 10px;
     margin-bottom: 8px;
     padding: 0 15px;
     cursor: default;
@@ -70,18 +83,32 @@ body{
 }
 .todolist li span{
     position: absolute;
+    height: 45px;
+    right: -65px;
+    width: 65px;
+    text-align: center;
+    border-radius: 0 5px 5px 0;
+    max-height: auto;
+    cursor: pointer;
+    color: orange;
+    background: red;
+    transition: all 0.3s ease;
+}
+/* .todolist li section{
+    position: absolute;
     right: -45px;
     width: 45px;
     text-align: center;
     border-radius: 0 3px 3px 0;
     cursor: pointer;
-    color: orange;
-    /* background: red; */
+    color: green;
+    background: pink;
     transition: all 0.3s ease;
-}
+} */
+
+
 .todolist li:hover span{
     right: 0px;
-
 }
 .box .clearAll{
     display: flex;
@@ -98,5 +125,11 @@ body{
     font-size: 25px;
     cursor: pointer;
     border-radius: 3px;
-    padding: 6px 10px;
+    padding: 8px 10px;
+    opacity: 0.6;
+    pointer-events:none;
+}
+.clearAll button.active{
+    opacity: 1;
+    pointer-events:auto;
 }
