--- a/style.css
+++ b/style.css
@@ -78,7 +78,8 @@ body{
     color: orange;
     /* background: red; */
     transition: all 0.3s ease;
-}
+} */
+
 .todolist li:hover span{
     right: 0px;
 
