--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body{
     width: 100%;
-    background:  #fdb416;
+    background:  #ffbc2c;
     /* background-image: linear-gradient(130deg, pink, #f6d365); */
 }
 .box{
@@ -134,7 +134,7 @@ body{
 .fa-trash, .fa-check{
     pointer-events: none;
 }
-.clearAll button{
+/* .clearAll button{
     border: none;
     outline: none;
     color: white;
@@ -147,8 +147,8 @@ body{
     margin-top: 25px;
     border-radius: 5px;
     border: 2px black solid;
-}
+} */
 
-.clearAll button:hover{
+/* .clearAll button:hover{
     transform: scale(1.2);
-}
+} */
